--- a/Frontend_AnimeFormats/Movie_OVA.html
+++ b/Frontend_AnimeFormats/Movie_OVA.html
@@ -171,7 +171,7 @@
 
             <!-- Anime 10 -->
             <div class="anime-item">
-                <img src="/Frontend_DetailPage/img/heroine" alt="Anime 10">
+                <img src="/Frontend_DetailPage/img/heroine.jpg" alt="Anime 10">
                 <p>Make Heroine ga Osugiru</p>
                 <p>Views: 3,400,000</p>
                 <button class="movie-button"><a href="/Frontend_DetailPage/heroine.html">Watch</a></button>
